themes/webtrees/style.css
/* ... */
#source-tabs, #note-tabs, #repo-tabs, #media-tabs {margin:auto; visibility:hidden; width:80%;}
#source-edit, #note-edit, #repo-edit, #media-edit {overflow-x:auto;}
.media-list td img {display:block; height:40px; margin:3px auto;}
.filtersH, .filtersF {margin:4px}
.filtersH img {margin-bottom:2px;}
.loading-image{background:#fff url(../../images/loading.gif) 50% 50% no-repeat; height:50px; margin:50px;}
#search-result-tabs, #places-tabs {margin:auto; width:98%; visibility:hidden;}
#searchAccordion-indi, #searchAccordion-fam, #searchAccordion-source, #searchAccordion-note {margin:auto; width:99%;}
#place-heirarchy h2, #place-heirarchy h4 {text-align:center;}

html[dir='rtl'] .source-list th:last-child, html[dir='rtl'] .note-list th:last-child, html[dir='rtl'] .repo-list th:last-child {margin:0 1px 1px -2px;}

/* ======= Block styles ========== */
#index_main_blocks {clear:none; width:66%; float:left; padding:3px;}
#index_small_blocks {clear:none; width:33%; float:right;}
#index_full_blocks {clear:none; width:100%;}
#random_picture {text-align:center;}
.small_inner_block {max-height:200px; overflow:auto; font-size:10px;}
.normal_inner_block {overflow:auto;}
.block {background-color:#edf7fd; border:solid #81a9cb 1px; font-size:12px; margin-top:10px; padding:3px; vertical-align:top;}
.blockcontent {margin:5px; font-size:13px; overflow:auto;}
.blockcontent .list_table {border-spacing:0; border:solid #81a9cb 1px; border-right:0;}
.blockcontent .list_value, .blockcontent  .list_value_wrap {border:0; border-top:solid #81a9cb 1px; border-right:solid #81a9cb 1px;}

/* ======= FAQ table styles ========== */
table.faq   {background-color:#e0e0e0; margin:5px 0 50px 5px;width:98%;}
table.faq  tr.odd td {background-color:#e7eef3;}
div.faq_title {background-color:#e0e0e0;margin:1em 0;padding:.25em;font-weight:bold;width:98%;}
div.faq_body {clear:both;margin:1em 0;padding:1em;}
.faq_italic {font-style:italic;font-weight:bold;font-size:90%;padding:0 10px;}
.faq_top {float:right;}
.faq_edit {float:right;}

html[dir='rtl'] .faq_top {float:left;}
html[dir='rtl'] .faq_edit {float:left;}

/* ======= Header menu styles  ========== */
#topMenu {float:left; width:100%; padding:5px 0; position:relative;}
#main-menu  {clear:both; position:relative; z-index:500; float:right; right:50%;}
#main-menu,
#main-menu   ul  {padding:0; margin:0; list-style-type:none;}
#main-menu   ul ul {z-index:600;}
#main-menu   li  {float:left; position:relative; left:50%;}
#main-menu li li {clear:both;}
#main-menu   li:hover > ul {display:block; position:absolute; top:0; left:100%; right:auto;}
#main-menu > li:hover > ul {left:0; right:auto; top:66px;}
#main-menu   a {display:block; white-space:nowrap; overflow:hidden;}
#main-menu   ul {position:absolute; display:none; background:#fff; border:thin solid #aaa; padding:5px 0; z-index:999;}
#main-menu li a {margin:auto; padding-top:52px; width:100%;}
#main-menu  li li a {display:block; position:relative; float:left; font-size:11px; line-height:1.5; padding:1px 10px 1px 5px;}

/* Menu icons */
#main-menu  > li {background-image:url(images/large_menu_sprite.png); background-repeat:no-repeat; width:110px; height:64px; text-align:center;}
#main-menu li li {background-image:url(images/small_menu_sprite.png); background-repeat:no-repeat; height:24px; left:auto; line-height:24px; text-align:left; text-indent:26px; width:100%}

/* Reverse left and right on RTL pages */
html[dir='rtl'] #topMenu {float:right;}
html[dir='rtl'] #main-menu li {float:right;}
html[dir='rtl'] #main-menu   li:hover > ul {right:100%; left:auto;}
html[dir='rtl'] #main-menu > li:hover > ul {left:auto; right:0;}
html[dir='rtl'] #main-menu   li  li {text-align:right;}
html[dir='rtl'] #main-menu  li li a {float:right;padding:1px 5px 1px 10px;}

/* Main menu icons */
#menu-calendar  {background-position:center -350px;}
#menu-chart     {background-position:center -140px;}
#menu-clippings {background-position:center -560px;}
#menu-fam       {background-position:center -770px;}
#menu-help      {background-position:center -490px;}
#menu-indi      {background-position:center -630px;}
#menu-list      {background-position:center -210px;}
#menu-mymenu    {background-position:center  -70px;}
#menu-note      {background-position:center -910px;}
#menu-obje      {background-position:center -840px;}
#menu-repo      {background-position:center -980px;}
#menu-report    {background-position:center -280px;}
#menu-search    {background-position:center -420px;}
#menu-sour      {background-position:center -700px;}
#menu-tree      {background-position:center    0;}
#menu-story     {background-position:center -1045px;}

/* Sub-menu icons */
#menu-admin                 {background-position:left     0;}   html[dir=rtl] #menu-admin                 {background-position:right     0;}
#menu-branches              {background-position:left  -450px;} html[dir=rtl] #menu-branches              {background-position:right  -450px;}
#menu-calendar-day          {background-position:left   -60px;} html[dir=rtl] #menu-calendar-day          {background-position:right   -60px;}
#menu-calendar-month        {background-position:left   -60px;} html[dir=rtl] #menu-calendar-month        {background-position:right   -60px;}
#menu-calendar-year         {background-position:left   -60px;} html[dir=rtl] #menu-calendar-year         {background-position:right   -60px;}
#menu-chart-ancestry        {background-position:left   -30px;} html[dir=rtl] #menu-chart-ancestry        {background-position:right   -30px;}
#menu-chart-compact         {background-position:left   -30px;} html[dir=rtl] #menu-chart-compact         {background-position:right   -30px;}
#menu-chart-descendancy     {background-position:left  -150px;} html[dir=rtl] #menu-chart-descendancy     {background-position:right  -150px;}
#menu-chart-familybook      {background-position:left  -180px;} html[dir=rtl] #menu-chart-familybook      {background-position:right  -180px;}
/* ... */

